# CrypticWatch

./: .gitignore  CMakeLists.txt  Makefile  README.md  block_watch_face.c  block_watch_face.h  main.c  res.h  res.rcp  watch_face.c  watch_face.h  watch_face_internal.h
WristPDA_SDK_v1.3/Include/: WristPDA.h  WristPDARes.h
